--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
     }
 
     .box {
-  position: relative; /* ← DODANE */
+  position: relative;
   background: var(--bg-light);
   padding: 50px;
   border-radius: 20px;
